SQuirreL SQL Client Change Log
==============================


${squirrelsql.changelog.header}


Enhancements:

New Plugin: Greenplum DB Plugin
  New Plugin for the Greenplum DB. Thanks to Adam Winn for the patch (Patch ID 3217167)


Feature Request 1744964: Copy text from the SQL editor panel as rich text. 
	This functionality is available via the pop-up menu and the tools pop-up. Additional this mode can be activated for copy shortcuts. 
	See: Session Properties => Syntax => Copy shortcuts use the "Rich Text Format"
	To use this, the RSyntax editor (Syntax Plugin) must be activated.

Source Tabs:
	Syntax highlighting is used for displaying the source of database objects, if the syntax plugin is installed.

Query Builder / New features in Graph plugin:
   The Query Builder is part of the Graph plugin. That means besides the former default and Zoom/Print modes
   Query Builder is a new mode of the Graph Plugin. Any existing Graph can be switched to the new mode.
   Besides the Query Builder itself several new features have been added to the Graph plugin:
   - A Graph can be viewed in separate window.
   - Tables can be dragged from the Object tree to a Graph window. For convenience there is a
     new Session tool bar button that creates a new Graph window and places it right besides the Session's Object tree.
   - Graphs have a Kick off/Start button on the lower left of a Graph panel to give more intuitive access to Graph functions.

Feature Request 3307812: Select an entire row via the table's pop-up menu.

Oracle Plugin: 
   - The DDL of a index could be displayed under the source tab.
   - Display the table related indexes in the object tree under the table node. This is additional to the
     generally index node, which displays all indexes of the schema.
   
New plugin "WIKI table configurations":
  This plugin provides some pre-defined configurations for various WIKI engines. With this configurations, Squirrel knows, how to transform the selection