@@ -1,2 +1,6 @@
 
 ViewSourceTab.display=Show view source
+
+
+TriggerDetailsTab.title=Details
+TriggerDetailsTab.hint=Display trigger details
